--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "@vue/cli": "^4.5.12",
     "vue-infinite-loading": "^2.4.5"
+  },
+  "dependencies": {
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   }
 }
